# api.py
@@ -40,7 +40,8 @@ def home():
                         'raison_sociale': 'CONTROLE TECHNIQUE SAINT SEB',
                         'enseigne': 'AUTO SECURITE',
                         'adresse': '329 ROUTE DE CLISSON ZAC DES GRIPOTS',
-                        'ville': 'ST SEBASTIEN SUR LOIRE 44230',
+                        'ville': 'ST SEBASTIEN SUR LOIRE',
+                        'code_postal': '44230',
                         'telephone': '02 40 80 06 00',
                         'option': 'GAZ*',
                         'site_internet': '',
@@ -61,7 +62,8 @@ def home():
                                 'agreement_number': 'S004S062',
                                 'enseigne': 'BA CONTROLE',
                                 'adresse': '3 AVENUE EMILE AUBERT',
-                                'ville': 'BARCELONNETTE 04400',
+                                'ville': 'BARCELONNETTE',
+                                'code_postal': '04400',
                                 'telephone': '04 92 81 15 89',
                                 'option': '',
                                 'site_internet': ''
@@ -340,6 +342,7 @@ def _process_agreement_request(agreement_number):
                 'enseigne': result.get('enseigne', ''),
                 'adresse': result.get('adresse', ''),
                 'ville': result.get('ville', ''),
+                'code_postal': result.get('code_postal', ''),
                 'telephone': result.get('telephone', ''),
                 'option': result.get('option', ''),
                 'site_internet': result.get('site_internet', ''),
